--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -1,15 +1,15 @@
 extends layouts/main
-
+include mixins/videoPlayer
 block content
     .video__player
         video(src=`/${video.fileUrl}`)
     .video__info
-      if video.creator.id === loggedUser.id
+     if loggedUser && video.creator.id === loggedUser.id
         a(href=routes.editVideo(video.id)) 
         button Edit video
         h5.video__title=video.title
         p.video__description=video.description
-      if video.views === 1
+      
         span.video__views #{video.views} views
           .video__author
             |Uploaded by 
