--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -9,7 +9,9 @@
 @import "partials/socialLogin.scss";
 @import "partials/videoBlock.scss";
 @import "partials/videoPlayer.scss";
+@import "partials/videoRecorder.scss";
+@import "partials/messages.scss";
+
 @import "pages/home.scss";
 @import "pages/videoDetail.scss";
 @import "pages/userProfile.scss";
-@import "partials/videoRecorder.scss";
